# RobotSoccer_TheFirstOrder

./: .gitignore  CMakeLists.txt  Matlab_simSkills.m  README.md  controller_home.m  drawEnvironment.m  package.xml  param.m  setup.py
AI/: MathFunctions.py  StarKillerMainControl.py  StarKillerMainControl.py~  __init__.py  dataClasses.py  exceptionAI.cpp
AI/Gameplay/: __init__.py  plays.py  skills.py  strategies.py  utilities.py
AI/main_control/: MathFunctions.py  StarKillerMainControl.py  dataClasses.py
AI/maincontrol/: StarKillerMainControl.py  __init__.py  publisher_CtrlMsg.py
AI/visiondata/: GameStatus.py  RosDataImporter.py  __init__.py  dataExample.json  hello.py  listener.py  subscriber_VisionMsg.py
AI_c/: AI.pro  mathfunctions.cpp  mathfunctions.h
AI_c/dataclasses/: gamestatus.cpp  gamestatus.h  point.h  robot.h
AI_c/gameplay/: fieldcoord.cpp  utilities.cpp  utilities.h
AI_c/visiondata/: subscriber_visionmsg.cpp
AI_cpp/: bookkeeping.cpp  bookkeeping.h  exceptionAI.h  info.txt  maincontrol.cpp  mathfunctions.cpp  mathfunctions.h  types.h
AI_cpp/ctrldata/: publisher_ctrlmsg.cpp  publisher_ctrlmsg.h
AI_cpp/dataclasses/: fieldobject.cpp  fieldobject.h  gamestatus.cpp  gamestatus.h  point.cpp  point.h  robot.cpp  robot.h
AI_cpp/gameplay/: fieldcoord.cpp  fieldcoord.h  plays.cpp  plays.h  skills.cpp  skills.h  strategy.cpp  strategy.h  utilities.cpp  utilities.h
AI_cpp/visiondata/: subscriber_visionmsg.cpp  subscriber_visionmsg.h
Control/: motor.py  plays.py  skills.py  utilities.py
beard_simulink_template/: controller_away.m  controller_home.m  robot_soccer_sim.slx
cad_models/: robot.SLDASM  robot_design_table__new.xlsx  tier1.SLDPRT  tier2.SLDPRT
launch/: system.launch
motion_control/: __init__.py  mat.py  mlib.py  skills.py
motion_control/roboclaw_python/: roboclaw.py
msg/: controldata.msg  piddata.msg  visiondata.msg
ros_ws/src/gazebo_sim/: CMakeLists.txt  package.xml
ros_ws/src/gazebo_sim/cad/: field_collision.blend
ros_ws/src/gazebo_sim/launch/: ball.launch  robot.launch  soccer.launch
ros_ws/src/gazebo_sim/meshes/: field9_collision.dae  field9_visual.dae
ros_ws/src/gazebo_sim/models/: camera.xacro  field.xacro
ros_ws/src/gazebo_sim/msg/: SoccerPoses.msg
ros_ws/src/gazebo_sim/plugins/: soccer_drive.cpp
ros_ws/src/gazebo_sim/src/: controller.cpp  vision.cpp
ros_ws/src/gazebo_sim/urdf/: ball.xacro  robot.xacro  wheel.xacro
ros_ws/src/gazebo_sim/worlds/: soccer_field.world  soccer_field.world.xacro
ros_ws/src/robot_soccer/: CMakeLists.txt  package.xml
ros_ws/src/robot_soccer/AI_cpp/: bookkeeping.cpp  bookkeeping.h  exceptionAI.cpp  exceptionAI.h  maincontrol.cpp  mathfunctions.cpp  types.h
ros_ws/src/robot_soccer/AI_cpp/dataclasses/: gamestatus.cpp  gamestatus.h  point.cpp  robot.cpp
ros_ws/src/robot_soccer/AI_cpp/debug/: publisher_debugmsg.cpp  publisher_debugmsg.h  subscriber_debugmsg.cpp  subscriber_debugmsg.h
ros_ws/src/robot_soccer/AI_cpp/gameplay/: fieldcoord.cpp  plays.cpp  skills.cpp  skills.h  strategy.cpp  utilities.cpp  utilities.h
ros_ws/src/robot_soccer/AI_cpp/kalmanfilter/: getFilteredData.cpp  getFilteredData.h  kfiltercom.py  sample_lpf.py
ros_ws/src/robot_soccer/AI_cpp/visiondata/: subscriber_visionmsg.cpp  subscriber_visionmsg.h
ros_ws/src/robot_soccer/Control/: roboclaw_old.py
ros_ws/src/robot_soccer/ai/: bookkeeping.cpp  bookkeeping.h  exceptionAI.cpp  exceptionAI.h  maincontrol.cpp  mathfunctions.cpp  mathfunctions.h  types.h
ros_ws/src/robot_soccer/ai/dataclasses/: fieldobject.h  gamestatus.h  robot.h
ros_ws/src/robot_soccer/ai/debug/: publisher_debugmsg.cpp  subscriber_debugmsg.cpp
ros_ws/src/robot_soccer/ai/gameplay/: fieldcoord.cpp  plays.cpp  plays.h  skills.cpp  skills.h  strategy.cpp  strategy.h  utilities.cpp  utilities.h
ros_ws/src/robot_soccer/ai/kalmanfilter/: globals.py  kfiltercom.py
ros_ws/src/robot_soccer/ai/visiondata/: subscriber_visionmsg.h
ros_ws/src/robot_soccer/game_control/: gamecontroller.cpp  values.txt
ros_ws/src/robot_soccer/motion_control/utilities/: __init__.py
ros_ws/src/robot_soccer/msg/: gameparam.msg  piddata.msg  visiondata.msg
ros_ws/src/robot_soccer/simulation_kalman/: ball_change_frames.m  controller_away.m  param.m~  soccer_dynamics.m
ros_ws/src/robot_soccer/vision/calibrate_field/: calibratefield.cpp
ros_ws/src/robot_soccer/vision/center_field/: centerfield.cpp
ros_ws/src/robot_soccer/vision/color_detection_test/: colordetection.cpp
ros_ws/src/robot_soccer/vision/multiobject_detection_test/: multiobjectdetection.cpp
ros_ws/src/robot_soccer/vision/robot_vision/: ball.cpp  ball.h  config.cpp  config.h  hsvcolorsubspace.h  main.cpp  param.json  parameters.cpp  parameters.h  robot.cpp  robot.h
ros_ws/src/soccer/: CMakeLists.txt  CMakeLists.txt~
ros_ws/src/soccer/cad/: field_visual.blend  soccer_robot.blend
simulation/: README.md  controller_away.m  controller_home.m  robot_change_frames.m
simulation_kalman/: camera.m  controller_home.m  controller_home.m~  controller_home.prj  drawEnvironment.m  kalman.py  lowlevelctrl.m  param.m  robot_soccer_sim_cam.slx
simulation_kalman/controller_home/: PackagingLog.txt
simulation_kalman/controller_home/for_testing/: readme.txt
vision/: ColorSegmentation.cpp  dataexample.json
vision/calibrate_field/: CMakeLists.txt  calibratefield.cpp
vision/center_field/: CMakeLists.txt  centerfield.cpp
vision/color_detection_test/: CMakeLists.txt  colordetection.cpp  colordetection.cpp~
vision/colorsegmentationtest/: CMakeLists.txt
vision/multiobject_detection_test/: CMakeLists.txt  multiobjectdetection.cpp
vision/object_tracking_test/: CMakeLists.txt  objecttracking.cpp  objecttracking.cpp~
vision/objecttrackingtest/: ObjectTracking.cpp
vision/robot_vision/: CMakeLists.txt  ball.cpp  ball.h  config.cpp  config.h  definedcvobject.h  hsvcolorsubspace.cpp  hsvcolorsubspace.h  main.cpp  objectdetection.cpp  objectdetection.h  param.json  parameters.cpp  parameters.h  robot.cpp  robot.h  undefinedcvobject.cpp  undefinedcvobject.h  utils.cpp  utils.h
(+9 files in other folders)
