cmake_minimum_required(VERSION 2.8)
project( RobotVision )
find_package( OpenCV REQUIRED )
add_executable( RobotVision main.cpp hsvcolorsubspace.h undefinedcvobject.h utils.h objectdetection.h )
target_link_libraries( RobotVision ${OpenCV_LIBS} )
include_directories(~/imports/rapidjson/include)
add_definitions(-std=c++11)
